@@ -39,7 +39,8 @@
         <div id="osdtimer"></div>
         <div id="osdepg"></div>
         <div id="osdtime"></div>
-        <div id="osdca"></div>    
+        <div id="osdca"></div>
+	<div id="osdlogo"></div>    
     </div>
 
 	<div id="schedule"></div>
