@@ -16,6 +16,8 @@ VDR 1.7.29+
 	Timed change, set to 0 for old behavior (press ok for change)
 	epginfo box was left active but invisible when pressed menu(green key didn't change audio but show epginfonext)
 	add to favorite now refreshes view
+	added keys from Motorola NYX remote. (Both up/down/left/right keys do the same)
+	Turn record key off 
 
 0.25	Get recordings from Streamdev, Restfulapi or SmartTVweb.
 	Check if SmartTVweb is on the server if not turn SmartTVweb options off
